styles/style.css
.page {
  min-inline-size: 320px;
  min-block-size: 100dvb;
  color: var(--text-color);
  font-family: var(--main-font), Arial, sans-serif;
  font-variation-settings: var(--main-font-settings);
  background-color: var(--page-background-color);
  background-image: var(--background-pattern);
  background-size: cover;
  background-attachment: fixed;
}

.content-section {
  inline-size: var(--content-width);
}

.header {
  display: grid;
  justify-items: center;
  align-content: center;
  min-block-size: var(--header-block-size);
  margin: 100px auto;
  padding: clamp(7.5rem, 7.2321rem + 1.3393vw, 8.4375rem) 14px 24px;
  border: 2px solid var(--accent-color);
  background-color: var(--page-background-color);
  font-family: var(--accent-font), fantasy;
  text-transform: uppercase;
}

.header__logo {
  font-size: clamp(3.0625rem, 2.7768rem + 1.4286vw, 4.0625rem);
  line-height: 1;
  text-decoration: none;
}

.header__title {
  margin-block-start: 20px;
  font-size: clamp(0.875rem, 0.625rem + 1.25vw, 1.75rem);
  line-height: 1;
}

.main {
  display: grid;
  justify-items: center;
  padding-block-end: 100px;
}

.cards__list {
  display: grid;
  gap: 50px;
}

.card {
  border: 2px solid var(--accent-color);
  background-color: var(--page-background-color);
}

.card__title {
  padding: 4px 10px 6px;
  border-block-end: 2px solid var(--accent-color);
  font-size: 18px;
  line-height: 1.22;
  font-variation-settings: var(--title-font-settings);
}

.card__image-wrapper {
  position: relative;
  overflow: hidden;
  border-block-end: 2px solid var(--accent-color);
}

.card__image {
  display: block;
  inline-size: 100%;
  aspect-ratio: 1 / 1;
  object-fit: cover;
  object-position: center;
  image-rendering: pixelated;
}

.card__label {
  position: absolute;
  inset-block-start: 25px;
  inset-inline-end: 25px;
  opacity: 0.5;
  color: var(--text-color);
  font-family: var(--accent-font), fantasy;
  font-size: 14px;
  line-height: 1;
  text-shadow:
    1px 0 var(--label-stroke-color),
    -1px 0 var(--label-stroke-color),
    0 1px var(--label-stroke-color),
    0 -1px var(--label-stroke-color);
  text-transform: uppercase;
  mix-blend-mode: hard-light;
}

.card__content {
  display: grid;
  gap: 27px;
  padding: 25px;
  font-size: 18px;
  line-height: 1.17;
}

.card__buttons {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 4px;
  padding: 0 25px 25px;
}

.button {
  position: relative;
  overflow: hidden;
  min-block-size: 38px;
  border: 2px solid var(--accent-color);
  padding: 9px 17px;
  color: var(--button-text-color);
  font-family: var(--accent-font), fantasy;
  font-size: 14px;
  line-height: 0.9;
  background-color: var(--page-background-color);
  cursor: pointer;
  transition: box-shadow 0.3s ease;
}

.button::before {
  content: '';
  position: absolute;
  inset: 0;
  background-color: var(--accent-color);
  transform: translateX(-100%);
  transition: transform 0.5s ease-in-out;
}

.button:hover::before {
  transform: translateX(0);
}

.button:focus {
  outline: none;
}

.button:focus-visible {
  box-shadow: 2px 2px 0 var(--accent-color);
}

.button__text {
  position: relative;
  z-index: 1;
  color: var(--button-text-color);
  mix-blend-mode: difference;
}

.card__icon-button {
  display: grid;
  place-items: center;
  inline-size: 39px;
  block-size: 36px;
  border: 2px solid transparent;
  padding: 0;
  background-color: transparent;
  cursor: pointer;
  transition: border-color 0.3s ease;
}

.card__icon-button:focus {
  outline: none;
}

.card__icon-button:focus-visible {
  border-color: var(--accent-color);
}

.card__like-button {
  inline-size: 130px;
}

.save-button {
  display: flex;
  align-items: center;
  gap: 8px;
  margin-block-start: 50px;
  padding: 14px 19px;
}

.save-button__icon {
  position: relative;
  z-index: 1;
  flex: 0 0 auto;
  color: var(--button-text-color);
  mix-blend-mode: difference;
}

.dialog {
  inline-size: clamp(21.3125rem, 21.0982rem + 1.0714vw, 22.0625rem);
  max-inline-size: calc(100% - 36px);
  border: 2px solid var(--accent-color);
  padding: 30px;
  color: var(--text-color);
  background-color: var(--page-background-color);
}

.dialog:not([open]) {
  display: none;
}

.dialog[open] {
  display: grid;
  gap: 30px;
}

.dialog::backdrop {
  background-color: rgb(0 0 0 / 0.75);
}

.dialog__content {
  display: grid;
  grid-template-columns: 39px 1fr;
  gap: 20px;
  align-items: center;
}

.dialog__icon {
  inline-size: 39px;
  block-size: 39px;
}

.dialog__text {
  font-family: var(--accent-font), fantasy;
  font-size: 14px;
  line-height: 1.5;
  text-transform: uppercase;
}

.dialog__button {
  inline-size: 100%;
  text-transform: uppercase;
}

.filter-grayscale {
  filter: grayscale(0.8);
}

.filter-sepia {
  filter: sepia(0.7);
}

.filter-saturate {
  filter: saturate(1.8);
}

.filter-rotate {
  filter: hue-rotate(75deg);
}

.filter-invert {
  filter: invert(0.75);
}

.filter-blur {
  filter: blur(1px);
}

.filter-bright {
  filter: brightness(1.2) contrast(1.35);
}

.filter-multiple {
  filter: sepia(0.4) hue-rotate(160deg) saturate(1.5);
}

@supports ((-webkit-text-stroke: 1px #000) or (text-stroke: 1px #000)) {
  .card__label {
    text-shadow: none;
    -webkit-text-stroke: 1px var(--label-stroke-color);
    text-stroke: 1px var(--label-stroke-color);
  }
}

@media (width <= 375px) {
  .content-section {
    inline-size: 100%;
  }

  .header {
    margin-block: 100px;
  }

  .card__label {
    inset-block-start: 23px;
    inset-inline-end: 11px;
  }

  .save-button {
    flex-direction: column;
    inline-size: 306px;
    padding: 15px 19px;
  }

  .save-button__icon {
    inline-size: 28px;
    block-size: 28px;
  }
}

